fixed group spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,10 +51,7 @@ p{
 .me{
   color: ghostwhite;
   text-align: center;
-  text-shadow: -1px 1px 0 #000,
-				  1px 1px 0 #000,
-				 1px -1px 0 #000,
-				-1px -1px 0 #000;
+  text-shadow: -2px 2px 0 #000, 2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000;
 }
 
 .projects{
